--- a/Tasks.ipynb
+++ b/Tasks.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install -r dependences.txt"
+    "pip install -r 'dependences.txt'"
    ]
   },
   {
